--- a/frontend/core/src/main/webapp/static/app/lists/listSlides.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listSlides.html
@@ -2,8 +2,8 @@
 swiper-container="list" swiper-type="main" expected-slides=2>
   <div class="swiper-wrapper">
     <div class="swiper-slide" swiper-slide="list/tasks" slide-index=0
-    ng-include="'static/app/lists/listTasks.html'"></div>
+    ng-include="urlBase + 'app/lists/listTasks.html'"></div>
     <div class="swiper-slide" swiper-slide="list/notes" slide-index=1
-    ng-include="'static/app/lists/listNotes.html'"></div>
+    ng-include="urlBase + 'app/lists/listNotes.html'"></div>
   </div>
 </div>
