--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -1,25 +1,25 @@
 <div id="editor" class="container-editor" ng-controller="EditorController" drawer="right"
 vertical-resize="editor" vertical-resize-prevent="!isEditorVisible()" ng-switch="editorType">
   <div ng-if="editorVisible" ng-switch-when="task" class="container-editor--inner">
-    <div ng-include="'static/app/tasks/taskEditor.html'" include-replace></div>
+    <div ng-include="urlBase + 'app/tasks/taskEditor.html'" include-replace></div>
   </div>
   <div ng-if="editorVisible" ng-switch-when="note" class="container-editor--inner">
-    <div ng-include="'static/app/notes/noteEditor.html'" include-replace></div>
+    <div ng-include="urlBase + 'app/notes/noteEditor.html'" include-replace></div>
   </div>
   <div ng-if="editorVisible" ng-switch-when="list" class="container-editor--inner">
-    <div ng-include="'static/app/lists/listEditor.html'" include-replace></div>
+    <div ng-include="urlBase + 'app/lists/listEditor.html'" include-replace></div>
   </div>
   <div ng-if="editorVisible" ng-switch-when="item" class="container-editor--inner">
-    <div ng-include="'static/app/main/itemEditor.html'" include-replace></div>
+    <div ng-include="urlBase + 'app/main/itemEditor.html'" include-replace></div>
   </div>
   <div ng-if="editorVisible" ng-switch-when="tag" class="container-editor--inner">
-    <div ng-include="'static/app/base/tagEditor.html'" include-replace></div>
+    <div ng-include="urlBase + 'app/base/tagEditor.html'" include-replace></div>
   </div>
   <div ng-if="editorVisible" ng-switch-when="omnibar" class="container-editor--inner">
-    <div ng-include="'static/app/main/omnibarEditor.html'" include-replace></div>
+    <div ng-include="urlBase + 'app/main/omnibarEditor.html'" include-replace></div>
   </div>
   <div ng-if="editorVisible" ng-switch-when="user" class="container-editor--inner">
-    <div ng-include="'static/app/user/userEditor.html'" include-replace></div>
+    <div ng-include="urlBase + 'app/user/userEditor.html'" include-replace></div>
   </div>
   <div ng-if="editorVisible" toaster="override"></div>
 </div>
