--- a/frontend/core/src/main/webapp/static/app/user/userSlides.html
+++ b/frontend/core/src/main/webapp/static/app/user/userSlides.html
@@ -2,8 +2,8 @@
 swiper-container="user" swiper-type="main" expected-slides= 2>
   <div class="swiper-wrapper">
     <div class="swiper-slide swiper-no-swiping" swiper-slide="user/home" slide-index=0
-    ng-include="'static/app/user/userHome.html'"></div>
+    ng-include="urlBase + 'app/user/userHome.html'"></div>
     <div class="swiper-slide" swiper-slide="user/details" slide-index=1
-    ng-include="'static/app/user/userDetails.html'"></div>
+    ng-include="urlBase + 'app/user/userDetails.html'"></div>
   </div>
 </div>
