--- a/frontend/core/src/main/webapp/static/app/entry/entrySlides.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entrySlides.html
@@ -2,9 +2,9 @@
   <div class="container-fluid">
     <div class="swiper-container container-fluid--inner" swiper-container="entry" swiper-type="main" expected-slides="3" swiper-container-slide-changed="entrySwiperSlideChanged(path, activeIndex)">
       <div class="swiper-wrapper">
-        <div class="swiper-slide swiper-no-swiping" swiper-slide="entry/home" slide-index=0 ng-include="'static/app/entry/entryHome.html'"></div>
-        <div class="swiper-slide swiper-no-swiping" swiper-slide="entry/main" slide-index=1 ng-include="'static/app/entry/entryMain.html'"></div>
-        <div class="swiper-slide swiper-no-swiping" swiper-slide="entry/details" slide-index=2 ng-include="'static/app/entry/entryDetails.html'"></div>
+        <div class="swiper-slide swiper-no-swiping" swiper-slide="entry/home" slide-index=0 ng-include="urlBase + 'app/entry/entryHome.html'"></div>
+        <div class="swiper-slide swiper-no-swiping" swiper-slide="entry/main" slide-index=1 ng-include="urlBase + 'app/entry/entryMain.html'"></div>
+        <div class="swiper-slide swiper-no-swiping" swiper-slide="entry/details" slide-index=2 ng-include="urlBase + 'app/entry/entryDetails.html'"></div>
       </div>
     </div>
   </div>
