--- a/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
@@ -3,7 +3,7 @@
     <h2 class="group-heading justified row">favorite</h2>
     <div class="animate-list-item-leave tall"
     ng-repeat="note in getList() | orderBy:'favorited':true | limitTo: currentListLimitTo"
-    list-item="getList().length" ng-include="'static/app/notes/noteListItem.html'"></div>
+    list-item="getList().length" ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
     <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
   </section>
   <footer ng-show="isOnboarded('focusNotes')" class="container-content--after" list-footer="getFeatureMap('focus')"></footer>
