--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -323,13 +323,13 @@
               </div>
 
               <div list-item-add="getNewDayTask(2)" list-item-add-save="saveTask(newItem)"
-              ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+              ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
               <div class="animate-list-item-leave"
               ng-repeat="task in rightDuplicateTasks = (getList()
               | paramFilter:isListItemVisible:daySlides[2].pastDate)
               | orderBy:'created':true
               | limitTo: currentListLimitTo"
-              list-item="rightDuplicateTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+              list-item="rightDuplicateTasks.length" ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
               <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
             </div>
           </div>
@@ -348,13 +348,13 @@
               </div>
 
               <div list-item-add="getNewDayTask(0)" list-item-add-save="saveTask(newItem)"
-              ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+              ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
               <div class="animate-list-item-leave"
               ng-repeat="task in leftTasks = (getList()
               | paramFilter:isListItemVisible:daySlides[0].pastDate)
               | orderBy:'created':true
               | limitTo: currentListLimitTo"
-              list-item="leftTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+              list-item="leftTasks.length" ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
               <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
 
             </div>
@@ -374,13 +374,13 @@
               </div>
 
               <div list-item-add="getNewDayTask(1)" list-item-add-save="saveTask(newItem)"
-              ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+              ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
               <div class="animate-list-item-leave"
               ng-repeat="task in middleTasks = (getList()
               | paramFilter:isListItemVisible:daySlides[1].pastDate)
               | orderBy:'created':true
               | limitTo: currentListLimitTo"
-              list-item="middleTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+              list-item="middleTasks.length" ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
               <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
 
             </div>
@@ -400,13 +400,13 @@
               </div>
 
               <div list-item-add="getNewDayTask(2)" list-item-add-save="saveTask(newItem)"
-              ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+              ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
               <div class="animate-list-item-leave"
               ng-repeat="task in rightTasks = (getList()
               | paramFilter:isListItemVisible:daySlides[2].pastDate)
               | orderBy:'created':true
               | limitTo: currentListLimitTo"
-              list-item="rightTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+              list-item="rightTasks.length" ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
               <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
 
             </div>
@@ -426,13 +426,13 @@
               </div>
 
               <div list-item-add="getNewDayTask(0)" list-item-add-save="saveTask(newItem)"
-              ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+              ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
               <div class="animate-list-item-leave"
               ng-repeat="task in leftDuplicateTasks = (getList()
               | paramFilter:isListItemVisible:daySlides[0].pastDate)
               | orderBy:'created':true
               | limitTo: currentListLimitTo"
-              list-item="leftDuplicateTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+              list-item="leftDuplicateTasks.length" ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
               <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
 
             </div>
