--- a/frontend/core/src/main/webapp/static/app/lists/listTasks.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listTasks.html
@@ -9,11 +9,11 @@
       <div class="group-mixed--right" task-list-completed></div>
     </div>
     <div list-item-add="{transientProperties: {completed: false, list: list.uuid, itemType: 'task'}}" list-item-add-save="saveTask(newItem)"
-    ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+    ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
     <div class="animate-list-item-leave"
     ng-repeat="task in listTasks = (getList() | paramFilter:isListItemVisible) | orderBy:'created':true
     | limitTo: currentListLimitTo"
-    list-item="listTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+    list-item="listTasks.length" ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
     <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('list')"></footer>
