--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
@@ -12,11 +12,11 @@
       <div class="group-mixed--right" task-list-completed></div>
     </div>
     <div list-item-add="getNewTaskWithContext(context)" list-item-add-save="saveTask(newItem)"
-    ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+    ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
     <div class="animate-list-item-leave"
     ng-repeat="task in contextTasks = (getList() | paramFilter:isListItemVisible) | orderBy:'created':true
     | limitTo: currentListLimitTo"
-    list-item="contextTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+    list-item="contextTasks.length" ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
     <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('tasks')"></footer>
