--- a/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
@@ -8,11 +8,11 @@
         <div class="group-mixed--right" task-list-completed></div>
       </div>
       <div list-item-add="{transientProperties: {completed: false, itemType: 'task'}}"
-      list-item-add-save="saveTask(newItem)" ng-include="'static/app/tasks/taskListItemAdd.html'"></div>
+      list-item-add-save="saveTask(newItem)" ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
       <div class="animate-list-item-leave"
       ng-repeat="task in recentTasks = (getList() | paramFilter:isListItemVisible) | orderBy:getTaskModified:true
       | limitTo: currentListLimitTo"
-      list-item="recentTasks.length" ng-include="'static/app/tasks/taskListItem.html'"></div>
+      list-item="recentTasks.length" ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
       <div ng-if="(currentListLimitTo < listLength) && nearListBottom" loading-animation></div>
     </div>
 
