--- a/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
@@ -2,10 +2,10 @@
 swiper-container="tasks" swiper-type="main" expected-slides=3>
   <div class="swiper-wrapper" ng-class="onboardingInProgress && 'swiper-no-swiping'">
     <div class="swiper-slide" swiper-slide="tasks/recent" slide-index=0
-    ng-include="'static/app/tasks/tasksRecent.html'"></div>
+    ng-include="urlBase + 'app/tasks/tasksRecent.html'"></div>
     <div class="swiper-slide" swiper-slide="tasks/contexts" slide-index=1
-    ng-include="'static/app/tasks/tasksContexts.html'"></div>
+    ng-include="urlBase + 'app/tasks/tasksContexts.html'"></div>
     <div class="swiper-slide" swiper-slide="tasks/context" slide-index=2
-    ng-include="'static/app/tasks/tasksContext.html'"></div>
+    ng-include="urlBase + 'app/tasks/tasksContext.html'"></div>
   </div>
 </div>
