Fixed cordova index.html paths

--- a/frontend/cordova/src/main/resources/android/index.html
+++ b/frontend/cordova/src/main/resources/android/index.html
@@ -24,7 +24,7 @@
   <meta name="format-detection" content="telephone=no" />
 
   <title>extended mind</title>
-  <link rel="stylesheet" href="/static/${project.version}/css/em.css"/>
+  <link rel="stylesheet" href="static/${project.version}/css/em.css"/>
   <script src="cordova.js"></script>
   <script>
     var packaging = "android-cordova";
@@ -52,6 +52,6 @@
 </head>
 <body>
   <div class="android" root-view></div>
-  <script src="${project.version}/static/em.min.js"></script>
+  <script src="static/${project.version}/em.min.js"></script>
 </body>
 </html>
