--- a/frontend/cordova/src/main/resources/ios/index.html
+++ b/frontend/cordova/src/main/resources/ios/index.html
@@ -24,7 +24,7 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0"/>
   <title>extended mind</title>
-  <link rel="stylesheet" href="/static/${project.version}/css/em.css"/>
+  <link rel="stylesheet" href="static/${project.version}/css/em.css"/>
   <script src="cordova.js"></script>
   <script>
     var packaging = "ios-cordova";
@@ -52,6 +52,6 @@
 </head>
 <body onload="onLoad()">
   <div class="ios" root-view></div>
-  <script src="${project.version}/static/em.min.js"></script>
+  <script src="static/${project.version}/em.min.js"></script>
 </body>
 </html>
