--- a/frontend/core/src/main/webapp/static/app/entry/reset.html
+++ b/frontend/core/src/main/webapp/static/app/entry/reset.html
@@ -2,8 +2,10 @@
   <div class="container-fluid">
     <form class="container-fluid--inner" name="resetForm">
       <section class="container-content">
-        <h2>reset password</h2>
-        <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password&#8230;" ng-keydown="typePassword()" required />
+        <h2 class="group-heading instruction row">reset password</h2>
+        <div class="row-form">
+          <input type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password&#8230;" ng-keydown="typePassword()" required />
+        </div>
         <div class="group-error row">
           <div ng-if="resetForm.password.$touched" ng-messages="resetForm.password.$error">
             <span class="text-error" ng-message="minlength">password must be 7 characters or more</span>
@@ -15,7 +17,7 @@
       </section>
       <footer class="container-content--after group-btn">
         <button type="submit" class="btn-action" ng-disabled="!resetForm.$valid" ng-click="resetPassword()">
-          <span class="text-btn">log in</span>
+          <span class="text-btn">done</span>
         </button>
       </footer>
     </form>
