Fixed broken Play store link

--- a/frontend/core/src/main/webapp/landing/download.html
+++ b/frontend/core/src/main/webapp/landing/download.html
@@ -42,7 +42,7 @@
     font-size: 14px;
   }
   .download-buttons {
-    padding-top: 14vh;  
+    padding-top: 14vh;
   }
   .highlight {
     color: #0098ea;
@@ -97,7 +97,7 @@
           <span class="text-details">iphone 4s or later</span>
       </div>
       <div class="pull-right">
-        <a href="market://play.google.com/store/apps/details?id=org.extendedmind">
+        <a href="market://details?id=org.extendedmind">
           <img style="width: 120px" src="img/playstore.png" />
         </a><br/>
           <span class="text-details">4.4 kitkat or later</span>
