--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -23,7 +23,7 @@
     var trackSignupLink = function(type) {
        ga('send', 'event', 'signup', 'click', type, {'hitCallback':
          function () {
-         document.location = 'https://ext.md/launch';
+         document.location = 'https://ext.md';
          }
        });
     }
@@ -33,7 +33,7 @@
 <body>
 
   <div class="page-header links">
-    <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md/login"><b>log in</b></a>
+    <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md"><b>log in</b></a>
   </div>
 
   <div class="container">
@@ -183,7 +183,7 @@
         practices, <b>designed to integrate the biological
         and the digital mind</b><br/><br/>
 
-        <a href="https://ext.md/launch" class="button" onclick="trackSignupLink('lower'); return false;"><span>sign up for beta now</span></a><br/>
+        <a href="https://ext.md" class="button" onclick="trackSignupLink('lower'); return false;"><span>sign up for beta now</span></a><br/>
         </p>
       </div>
     </div>
@@ -192,7 +192,7 @@
 
     <div class="row">
       <div class="col-md-12 lean-center links">
-        <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md/login"><b>log in</b></a>
+        <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="mailto:info@ext.md">contact</a> | <a href="https://ext.md"><b>log in</b></a>
       </div>
     </div>
 
