Removed non-existing editor-footer-expandable directive from keywords footer DOM element.

--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -52,7 +52,7 @@
       </div>
 
       <!-- EXPANDABLE FOOTER CONTENT -->
-      <div ng-if="footerExpanded" class="keywords-footer row" editor-footer-expandable ng-init="clearSelectedKeywords()">
+      <div ng-if="footerExpanded" class="keywords-footer row" ng-init="clearSelectedKeywords()">
 
         <!-- KEYWORDS -->
         <div ng-if="selectedKeywords && selectedKeywords.length" class="keywords-container">
