--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
@@ -2,7 +2,7 @@
   <section class="container-content" list="tasks | itemsFilter:{name:'byTagUUID', filterBy: context ? context.uuid : undefined}" list-order="top" swiper-prevent>
     <div class="group-mixed heading">
       <div class="group-mixed--middle">
-        <h2 class="group-heading long justified">
+        <h2 class="group-heading justified">
           <a ng-if="context" href ng-click="openEditor('tag', context)">
             <span class="text-heading" ng-bind="context ? '@' + context.title : 'no context'" clamp=2></span>
           </a>
