Vertically centered items in inbox.

--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -3,7 +3,7 @@
     <h2 class="group-heading justified row" ng-bind="items.length + ' items'"></h2>
 
     <div list-item-add="{transientProperties: {itemType: 'item'}}" list-item-add-save="saveItem(newItem)">
-      <form role="form" class="group-mixed bottom-padded swiper-no-swiping" ng-submit="callAndExit(saveItem, newItem)"
+      <form role="form" class="group-mixed with-checkbox swiper-no-swiping" ng-submit="callAndExit(saveItem, newItem)"
       data-snap-ignore="true" autocapitalize="none" autocorrect="off" editable-field-container
       editable-field-container-clicked-elsewhere="clickedElsewhere()">
         <div class="group-mixed--middle">
@@ -20,7 +20,7 @@
       </form>
     </div>
 
-    <div class="animate-list-item-leave row-padded" ng-repeat="item in getList() | orderBy:'created':true | limitTo: currentListLimitTo"
+    <div class="animate-list-item-leave row-vertically-centered" ng-repeat="item in getList() | orderBy:'created':true | limitTo: currentListLimitTo"
     list-item="getList().length">
       <a href class="link-list-item" swiper-click="openEditor('item', item)">
         <span class="text-link" clamp=2 ng-bind="item.title"></span>
